[tool.poetry]
name = "stratosnet-github-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stratosnet"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-material-extensions = "^1.1.1"
mkdocs-macros-plugin = "^1.0.1"
pymdown-extensions = "^10.0.1"
mkdocs-material = "^9.1.15"
pillow = "^9.5.0"
cairosvg = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
